# cs107_teaching_staff

./: .travis.yml  README.md
homework/HW1/HW1-final/: README.md
lectures/: README.md
pair_programming/: README.md
python_project/: .gitignore  README.md  setup.cfg
python_project/src/cs107_package/subpkg_1/: module_1.py  module_2.py
python_project/tests/: test_suite_1.py
