[metadata]
name = cs107_package
version = 0.0.1
author = Fabian Wermelinger
author_email = cs107.sys.dev@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://harvard-iacs.github.io/2021-CS107/
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src
